syntax = "proto3";

package Protocol;
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Google.Protobuf.Protocol";

// C : C->S
// S : S->C
enum MsgId {
  PERSON = 0;
  C_CHAT = 1;
  S_CHAT = 2;
  S_ENTER_GAME = 3;  
  S_LEAVE_GAME = 4;
  S_SPAWN = 5;
  S_DESPAWN = 6;
  C_MOVE = 7;
  S_MOVE = 8;
}

message C_Chat {
  string context = 1;
}

message S_Chat {
  string context = 1;
}

message S_EnterGame {
  PlayerInfo player = 1;
}

message S_LeaveGame {
}

message S_Spawn {
  repeated PlayerInfo players = 1;
}

message S_Despawn {
  repeated int32 playerIds = 1;
}

message C_Move {
  int32 posX = 1;
  int32 posY = 2;
}

message S_Move {
  int32 playerId =1;
  int32 posX = 2;
  int32 posY = 3;
}

message PlayerInfo {
  int32 playerId = 1;
  string name = 2;
  int32 posX = 3;
  int32 posY = 4;
}